...
        children: [
          Text(
            'ローカル',
            style: context.bodyStyle,
          ),
          Text(
            key: const Key('counter'),
            counter.toString(),
            style: context.titleStyle,
          ),
          Padding(
            padding: const EdgeInsets.symmetric(vertical: 16, horizontal: 8),
            child: Row(
...
