...
                  style: context.bodyStyle,
                ),
              ),
              const Divider(height: 1),
              ListTile(
                title: Text(
                  'ローカルカウンターのサンプル',
                  style:
                      context.bodyStyle.copyWith(fontWeight: FontWeight.bold),
                ),
                trailing: const Icon(
                  Icons.arrow_forward_ios_rounded,
                  size: 16,
...
